@@ -10,7 +10,8 @@ Date: 17. 04. 2024
   Balance Changes:
     - numerous recipe value changes. 
     - raw resource production recipes are now much more expensive since fish can be acquired easier
-    - transmutation devices pollution/minute 100->200
+    - transmutation device pollution/minute 100->200
+    - transmutation device now has 4 module slots
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.1 
 Date: 17. 04. 2024
